--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>WestCraft15.github.io</h1>
-        <p>Welcome. You're probably looking for the <a href="keyhunt/keyhunt.html">Scoutdigo Key Guide</a>.</p>
+        <p>Welcome. You're probably looking for the <a href="keyhunt/keyhunt">Scoutdigo Key Guide</a>.</p>
     </body>
 </html>
