--- a/keyhunt/guide.html
+++ b/keyhunt/guide.html
@@ -9,15 +9,15 @@
 
 	<body>
 		<ul class="navBar">
-			<li><a href="keyhunt.html">Landing page</a></li>
-			<li><a href="guide.html" class="current">Keys</a></li>
-			<li><a href="help.html">Help</a></li>
-			<li><a href="other.html">Other Stuff</a></li>
+			<li><a href="keyhunt">Landing page</a></li>
+			<li><a href="guide" class="current">Keys</a></li>
+			<li><a href="help">Help</a></li>
+			<li><a href="other">Other Stuff</a></li>
 <!--		<li class="dropdown"> -->
 <!--			<a href="javascript:void(0)">Version</a> -->
 <!--			<div class="dropdown-content"> -->
-<!--				<a href="guide.html" class="current">1.1</a> -->
-<!--				<a href="guide-af23.html">April Fools</a> -->
+<!--				<a href="guide" class="current">1.1</a> -->
+<!--				<a href="guide-af23">April Fools</a> -->
 <!--			</div> -->
 			</li>
 		</ul>
@@ -26,12 +26,12 @@
 			<h1>All Keys Video Guide</h1>
 			<p>This video shows the location of every Key in order. If you want to use the original guide, or if you need help on a specific Key, it can be found below.</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/ImDuLN3pQFo" title="All Keys" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 1</h2>
+			<h2 id="1">Key 1</h2>
 		  	<p>Mach Dash into the wall above the entrance to the Elevator room on Floor 1.</p>
 			<h3>Common Issues:</h3>
 			<ol><li>You can't continue to break through the wall until you have 25 Keys. It is not necessary to progress.</li></ol>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/vGQSddUHiZs" title="Key 1" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 2</h2>
+			<h2 id="2">Key 2</h2>
 			<p>Talk to Snick in the SAGE Building, then the Key spawns to the left of Oregano Mirage.</p>
 			<h3>Common Issues:</h3>
 			<ol>
@@ -39,24 +39,24 @@
 				<li>There is a very rare softlock that can happen if you don't talk to Snick before you have 5 Keys. Ask on Discord if you</li>
 			</ol>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/GrYFBF_FuFc" title="Key 2" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 3</h2>
+			<h2 id="3">Key 3</h2>
 			<p>Super Jump up to the right facing wall to the left of Gnome Forest, then Shoulder Bash a little less than half way up the wall.</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/WMeJlKWJbLQ" title="Key 3" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 4</h2>
+			<h2 id="4">Key 4</h2>
 			<p>Super Jump slightly to the left of The Three-Cheese Tundra, then Shoulder Bash into the left wall when you’re almost at the top.</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/XenVascCgds" title="Key 4" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 5</h2>
+			<h2 id="5">Key 5</h2>
 			<p>Super Jump past the one way platform to the right of You bring a light?, then Shoulder Bash right into the corner.</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/aZeBpteuVBY" title="Key 5" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 6</h2>
+			<h2 id="6">Key 6</h2>
 			<p>In the Floor 1 Secret room, shoot the gate with a pistol bullet (using the “Pistol Chainsaw” side attack, not Vigilante’s pistol).</p>
 			<h3>Common Issues:</h3>
 			<ol>
 				<li>If no bullet is fired, enter a level and immediately exit.</li>
-				<li>If the door doesn't break, talk to GPB in the <a href="help.html#void">Void Room</a> and verify you have the previous 5 Keys.</li>
+				<li>If the door doesn't break, talk to GPB in the <a href="help#void">Void Room</a> and verify you have the previous 5 Keys.</li>
 			</ol>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/I6rlKE50CYA" title="Key 6" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 7</h2>
+			<h2 id="7">Key 7</h2>
 			<p>While outside of the SAGE Building, input the Konami Code (↑ ↑ ↓ ↓ ← → ← → B A) using the arrow keys to become Mario. Now enter the building and press up on the Bloodsauce Dungeon machine to enter 1-1. Play through the level to find the Key where the top of the flag would normally be.</p>
 			<h3>Common Issues:</h3>
 			<ol>
@@ -65,101 +65,101 @@
 				<li>When returning to Peppino, you will have to jump before the last A press, or you'll get stuck in the floor.</li>
 			</ol>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/ox7522mlfsQ" title="Key 7" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 8</h2>
+			<h2 id="8">Key 8</h2>
 			<p>In the Floor 3 Secret room, grabbing and throwing the washing machine in the water 3 times will reveal a Key.</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/UFpNLmRmoJY" title="Key 8" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 9</h2>
+			<h2 id="9">Key 9</h2>
 			<p>Talk to GPB until he mentions “the locale”. Then, visit the Granny Pizza in the Floor 4 Secret room and press up to talk to her as a normal NPC. After this, you can find the Key hidden in a crawlspace under the mushrooms on Floor 3.</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Df0EjC3-JyY" title="Key 9" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 10</h2>
+			<h2 id="10">Key 10</h2>
 			<p>First, talk to GPB. When he mentions “someone in the roof”, it starts a chain where you must first talk to Pepperman in the Floor 1 Secret room. After this, visit the Floor 5 Secret room and Super Jump in front of each of the 3 paintings, destroying them. After which, the Key is spawned in the center of the room.</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/veTNn1-A48w" title="Key 10" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 11</h2>
+			<h2 id="11">Key 11</h2>
 			<p>Ground Pound directly in front of the Peppino statue by the entrance to reveal a Key in the floor.</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/zOXs65AfZsU" title="Key 11" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 12</h2>
+			<h2 id="12">Key 12</h2>
 			<p>In the Wrong Mod room, jumping into the ceiling reveals a hidden area with a Key and a Pizzaboy cutout.</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/6yiK1k8K5YQ" title="Key 12" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 13</h2>
+			<h2 id="13">Key 13</h2>
 			<p>In the long tunnel between Floor 5 and Top, you can find a Key hidden in a breakable wall on the left. Avoid using the present to get up.</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/kUyaBvNQRqg" title="Key 13" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 14</h2>
+			<h2 id="14">Key 14</h2>
 			<p>At the very top of the tower, you can collect a Key by falling off the right side and hugging the tower wall.</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/XFAqhj6tBYo" title="Key 14" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 15</h2>
+			<h2 id="15">Key 15</h2>
 			<p>Floating above the pedestal in the Green Room, right before you enter CToP.</p>
 			<h3>Common Issues:</h3>
 			<ol><li>See Unlocking CToP.</li></ol>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/W9-0v2ghRiQ" title="Key 15" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 16</h2>
+			<h2 id="16">Key 16</h2>
 			<p>Shoulder Bash left into the opposite corner of the Floor 1 Secret room.</p>
 			<h3>Common Issues:</h3>
 			<ol><li>If the key doesn't spawn, talk to GPB.</li></ol>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/9_ZCJNYk7go" title="Key 16" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 17</h2>
+			<h2 id="17">Key 17</h2>
 			<p>Floating in the middle of the ring on the SAGE Building.</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/JBueev16SIA" title="Key 17" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 18</h2>
+			<h2 id="18">Key 18</h2>
 			<p>Wall Run into the ceiling slightly to the right of the metal block next to Crust Cove.</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/eImdTR1Ja_Q" title="Key 18" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 19</h2>
+			<h2 id="19">Key 19</h2>
 			<p>On Floor 4, there are 6 locations for the Key to spawn. It will randomly choose one of them. Watch the video to see them all.</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/IWsLLU0MiNg" title="Key 19" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 20</h2>
+			<h2 id="20">Key 20</h2>
 			<p>Talk to GPB until he mentions "someone similar to you". Now, take the elevator to each floor in descending order and find Fake Peppino, who should spawn nearby. He only has a 50% chance of spawning on each floor. You can advance to the next floor if the save icon appears. Once you reach Floor 1, he will drop a Key. There is a rare softlock that can occur if you don’t pick up the key on Floor 1.</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/8_LP8axD1ws" title="Key 20" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 21</h2>
+			<h2 id="21">Key 21</h2>
 			<p>In the 4th room of CToP, “He Watches”, you can find a Key by rolling into the small room with the Tomato Toppin Animatronic.</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/YDiYXFKbyLI" title="Key 21" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 22</h2>
+			<h2 id="22">Key 22</h2>
 			<p>In the 9th room of CToP, “Quickly, to Space!”, there’s a Key on the ground between the Banana Peel and the Antigrav Bubble with the three Golf Burgers.</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/3-U3Ebl53MM" title="Key 22" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 23</h2>
+			<h2 id="23">Key 23</h2>
 			<p>On Floor 3 there is a secret to the right of the water just before the next room with a Key inside.</p>
 			<h3>Common Issues:</h3>
 			<ol><li>The Key above the water is a fake and unobtainable.</li></ol>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/rUbS2l9x3ig" title="Key 23" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 24</h2>
+			<h2 id="24">Key 24</h2>
 			<p>In the 12th room of CToP, “Not the Time for Games”, dodge the first cow (or abuse the character select taunt) after the Minigolf section to find a Key on the ground below.</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/PbFIL41I-co" title="Key 24" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 25</h2>
+			<h2 id="25">Key 25</h2>
 			<p>On Floor 2 there are two John blocks in the ceiling above Oregano Mirage. Ground Pound directly below them during Pizza Time to collect a Key.</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/C_LS53QqUFg" title="Key 25" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 26</h2>
+			<h2 id="26">Key 26</h2>
 			<p>You can continue breaking blocks in the same place you found the 1st Key. Talk to the Pizzaboy Clone and Super Jump directly above him to collect the Key.</p>
 			<h3>Common Issues:</h3>
 			<ol><li>If the block is still unbreakable, talk to GPB.</li></ol>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/7Yf12YkL10Q" title="Key 26" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 27</h2>
+			<h2 id="27">Key 27</h2>
 			<p>On Floor 2 there is a crevice in the floor between Wasteyard and Fast Food Saloon. Ground Pound on the right to reveal a new tunnel. Talk to the Pizzaboy Clone and run right on an invisible path. The Key is on another pillar in the void.</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/0betMQUhZR8" title="Key 27" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 28</h2>
+			<h2 id="28">Key 28</h2>
 			<p>Wall Run to the left of Deep Dish 9 to access another room. You can go through the ceiling on the right side to talk to the Pizzaboy Clone. The Key will spawn in a secret in the left wall of the bottom room.</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/T9oQCU3TOFo" title="Key 28" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 29</h2>
+			<h2 id="29">Key 29</h2>
 			<p>Super Jump from the right half of the Oh Shit! gate to find a secret room. Enter the door and talk to the Pizzaboy Clone. The Key will spawn on a platform below you.</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/h7dG1so0OuI" title="Key 29" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 30</h2>
+			<h2 id="30">Key 30</h2>
 			<p>Repeatedly enter the Void Room until a new platform spawns by the entrance (1/10 chance). The Key is on top of it.</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/6FVqR5OnoFw" title="Key 30" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 31</h2>
+			<h2 id="31">Key 31</h2>
 			<p>In Pizzascape, the Key is in a new room above the Secret that’s only available during Pizza Time. If you can’t access it, talk to GPB in the Void Room and try again. Complete a short challenge to find the Key and a Pizzaboy Cutout.</p>
 			<h3>Common Issues:</h3>
 			<ol><li>If you can't access the room, talk to GPB.</li></ol>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/THa74LpZOHk" title="Key 31" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 32</h2>
+			<h2 id="32">Key 32</h2>
 			<p>In Wasteyard, the 3rd room (“The Pit”) has a new secret in the pillar to the right of the two Ranchers. This brings you to a maze with 12 places for the key to spawn, chosen at random. Watch the video for a path to check them all.</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/I5e16AaYu7c" title="Key 32" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 33</h2>
+			<h2 id="33">Key 33</h2>
 			<p>In Crust Cove, there is a pit to the right of Pillar John with a door in a secret in the right wall. Switch your Grab Type to Pummel to cross the water without activating Pizza Time. Complete the challenge to obtain the Key. Switching to Vigilante may help, as his dynamite can kill the Rats and prevent a softlock.</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/DzAlIUU4kkI" title="Key 33" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 34</h2>
+			<h2 id="34">Key 34</h2>
 			<p>In room 12 of The Three-Cheese Tundra (“Back of the Fridge”), there is a platform at the bottom right. Take the door hidden in the wall to find a new room. Get to the bottom, toggle the On/Off Switch, and make it back to the top to collect the Key.</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Qw0cAiDh9JU" title="Key 34" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 35</h2>
+			<h2 id="35">Key 35</h2>
 			<p>In the 7th room of Pizzaboy’s Pizz-Pizza, there are John Blocks to the right of the Treasure Room door. They deactivate during Pizza Time. There is a door inside the wall that leads to a new room. Get all the way to the right, toggle the On/Off Switch, and make it back without getting caught by the Sausage Toppin Monster to collect the Key. Don’t shoot the Toppin Monster before pressing the switch, as this will softlock the room and force you to replay the entire level.</p>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/3-6pU8y_XA4" title="Key 35" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Key 36</h2>
+			<h2 id="36">Key 36</h2>
 			<p>The credits now show 6 new hints. You must complete them in this order:</p>
 			<ol>
 				<li>Ground Pound a platform in the 7th room of The Three-Cheese Tundra (“Icicle Pillars”). It’s the overhang immediately after you get up from the Pizza Box area.<br>
