--- a/keyhunt/keyhunt-af23.html
+++ b/keyhunt/keyhunt-af23.html
@@ -9,29 +9,26 @@
 
 	<body style="text-align: center;">
 		<ul class="navBar">
-			<li><a href="keyhunt-af23.html" class="current">Landing page</a></li>
-			<li><a href="guide-af23.html">Keys</a></li>
-			<li><a href="help-af23.html">Help</a></li>
-			<li><a href="other-af23.html">Other Stuff</a></li>
+			<li><a href="keyhunt-af23" class="current">Landing page</a></li>
+			<li><a href="guide-af23">Keys</a></li>
+			<li><a href="help-af23">Help</a></li>
+			<li><a href="other-af23">Other Stuff</a></li>
 			<li class="dropdown">
 				<a href="javascript:void(0)">Version</a>
 				<div class="dropdown-content">
-					<a href="keyhunt.html">1.1</a>
-					<a href="keyhunt-af23.html" class="current">April Fools</a>
+					<a href="keyhunt">1.1</a>
+					<a href="keyhunt-af23" class="current">April Fools</a>
 				</div>
 			</li>
 		</ul>
 		
 		<div style="padding:20px; margin-top:20px;">
 			<h1>Scoutdigo Key Hunt Guide</h1>
-			<h2>Why?</h2>
-			<p>To put it simply: I got tired of repeating myself.</p>
-			<p>Welcome to the sneak peak, by the way.</p>
+			<h2>April Fools Edition</h2>
 			<h1 style="margin-top: 128px; color: red">Read this. Seriously.</h1>
 			<p>You will probably have issues, and that's okay!</p>
-			<p>Struggling is part of the learning process.</p>
-			<p>However, to expedite that process I have included a help section, found <a href="help.html">here</a>.</p>
-			<p>Please, <span class="important">please</span> read it before asking questions. The answer is probably there.</p>
+			<p>There’s so many things wrong with this build.</p>
+			<p>However, to expedite this process I have included a help section, found <a href="help">here</a>.</p>
 		</div>
     </body>
 </html>
