--- a/keyhunt/other.html
+++ b/keyhunt/other.html
@@ -9,15 +9,15 @@
 
 	<body>
 		<ul class="navBar">
-			<li><a href="keyhunt.html">Landing page</a></li>
-			<li><a href="guide.html">Keys</a></li>
-			<li><a href="help.html">Help</a></li>
-			<li><a href="other.html" class="current">Other Stuff</a></li>
+			<li><a href="keyhunt">Landing page</a></li>
+			<li><a href="guide">Keys</a></li>
+			<li><a href="help">Help</a></li>
+			<li><a href="other" class="current">Other Stuff</a></li>
 <!--		<li class="dropdown"> -->
 <!--			<a href="javascript:void(0)">Version</a> -->
 <!--			<div class="dropdown-content"> -->
-<!--				<a href="other.html" class="current">1.1</a> -->
-<!--				<a href="other-af23.html">April Fools</a> -->
+<!--				<a href="other" class="current">1.1</a> -->
+<!--				<a href="other-af23">April Fools</a> -->
 <!--			</div> -->
 			</li>
 		</ul>
@@ -114,6 +114,11 @@
 				<li>Floor 4: I swear I've seen that janitor guy doing shady stuff around here...</li>
 				<li>Floor 5: ...I wouldn't trust that tubby golden fellow if I were you...</li>
 			</ul>
+			<h2 id="fakekeys">Fake Keys</h2>
+			<p>There are several fake Keys scattered around the tower. Here are a few of them:</p>
+			<img src="assets/fake-keys/f1.png" alt="The fake Key in the wall above John Gutter." width="50%">
+			<img src="assets/fake-keys/ctop.png" alt="The fake Key above the water on Floor 3 of CToP." width="50%">
+			<img src="assets/fake-keys/crustcove.png" alt="The fake Key in Crust Cove." width="50%">
 		</div>
     </body>
 </html>
