--- a/keyhunt/guide-af23.html
+++ b/keyhunt/guide-af23.html
@@ -9,15 +9,15 @@
 
 	<body>
 		<ul class="navBar">
-			<li><a href="keyhunt-af23.html">Landing page</a></li>
-			<li><a href="guide-af23.html" class="current">Keys</a></li>
-			<li><a href="help-af23.html">Help</a></li>
-			<li><a href="other-af23.html">Other Stuff</a></li>
+			<li><a href="keyhunt-af23">Landing page</a></li>
+			<li><a href="guide-af23" class="current">Keys</a></li>
+			<li><a href="help-af23">Help</a></li>
+			<li><a href="other-af23">Other Stuff</a></li>
 			<li class="dropdown">
 				<a href="javascript:void(0)">Version</a>
 				<div class="dropdown-content">
-					<a href="guide.html">1.1</a>
-					<a href="guide-af23.html" class="current">April Fools</a>
+					<a href="guide">1.1</a>
+					<a href="guide-af23" class="current">April Fools</a>
 				</div>
 			</li>
 		</ul>
