--- a/keyhunt/help.html
+++ b/keyhunt/help.html
@@ -9,15 +9,15 @@
 
 	<body>
 		<ul class="navBar">
-			<li><a href="keyhunt.html">Landing page</a></li>
-			<li><a href="guide.html">Keys</a></li>
-			<li><a href="help.html" class="current">Help</a></li>
-			<li><a href="other.html">Other Stuff</a></li>
+			<li><a href="keyhunt">Landing page</a></li>
+			<li><a href="guide">Keys</a></li>
+			<li><a href="help" class="current">Help</a></li>
+			<li><a href="other">Other Stuff</a></li>
 <!--		<li class="dropdown"> -->
 <!--			<a href="javascript:void(0)">Version</a> -->
 <!--			<div class="dropdown-content"> -->
-<!--				<a href="help.html" class="current">1.1</a> -->
-<!--				<a href="help-af23.html">April Fools</a> -->
+<!--				<a href="help" class="current">1.1</a> -->
+<!--				<a href="help-af23">April Fools</a> -->
 <!--			</div> -->
 			</li>
 		</ul>
@@ -26,6 +26,8 @@
 			<h1 style="text-align: center;">Troubleshooting Guide</h1>
 			<h2>If a Key isn't spawning...</h2>
 			<p>First, make sure you have all the previous Keys. Then, talk to GPB in the <a href="#void">Void Room</a> and try again. If it still doesn't spawn, you've already collected it.</p>
+			<h2>If a Key is inaccessible/uncollectable...</h2>
+			<p>It's probably fake. Click <a href="other#fakekeys">here</a> for a list of fake Keys.</p>
 			<h2>If you can't find an area...</h2>
 			<p>See below or click <a href="#locations">here</a>.</p>
 			<h2>If GPB won't say the right thing...</h2>
