--- a/keyhunt/keyhunt.html
+++ b/keyhunt/keyhunt.html
@@ -9,15 +9,15 @@
 
 	<body style="text-align: center;">
 		<ul class="navBar">
-			<li><a href="keyhunt.html" class="current">Landing page</a></li>
-			<li><a href="guide.html">Keys</a></li>
-			<li><a href="help.html">Help</a></li>
-			<li><a href="other.html">Other Stuff</a></li>
+			<li><a href="keyhunt" class="current">Landing page</a></li>
+			<li><a href="guide">Keys</a></li>
+			<li><a href="help">Help</a></li>
+			<li><a href="other">Other Stuff</a></li>
 <!--		<li class="dropdown"> -->
 <!--			<a href="javascript:void(0)">Version</a> -->
 <!--			<div class="dropdown-content"> -->
-<!--				<a href="keyhunt.html" class="current">1.1</a> -->
-<!--				<a href="keyhunt-af23.html">April Fools</a> -->
+<!--				<a href="keyhunt" class="current">1.1</a> -->
+<!--				<a href="keyhunt-af23">April Fools</a> -->
 <!--			</div> -->
 			</li>
 		</ul>
@@ -29,7 +29,7 @@
 			<h1 style="margin-top: 128px; color: red">Read this. Seriously.</h1>
 			<p>You will probably have issues, and that's okay!</p>
 			<p>Struggling is part of the learning process.</p>
-			<p>However, to expedite that process I have included a help section, found <a href="help.html">here</a>.</p>
+			<p>However, to expedite that process I have included a help section, found <a href="help">here</a>.</p>
 			<p>Please, <span class="important">please</span> read it before asking questions. The answer is probably there.</p>
 			<p style="margin-top: 64px; font-size: 12px;">Notice: WestCraft15 reserves the right to yell at you if you ask a dumb question.<br>A dumb question is defined as "anything which has already been answered in the help section."</p>
 		</div>
