rough void room transcript
plus a note about the leave dialog

--- a/keyhunt/guide.html
+++ b/keyhunt/guide.html
@@ -35,7 +35,7 @@
 			<p>Talk to Snick in the SAGE Building, then the Key spawns to the left of Oregano Mirage.</p>
 			<h3>Common Issues:</h3>
 			<ol>
-				<li>Contrary to popular belief, breaking the block before talking to Sinck doesn't prevent the key from spawning.</li>
+				<li>Contrary to popular belief, breaking the block before talking to Snick doesn't prevent the key from spawning.</li>
 				<li>There is a very rare softlock that can happen if you don't talk to Snick before you have 5 Keys. Ask on Discord if you</li>
 			</ol>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/GrYFBF_FuFc" title="Key 2" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
