--- a/keyhunt/other.html
+++ b/keyhunt/other.html
@@ -30,6 +30,16 @@
 			<h2>The Void Room</h2>
 			<audio controls>
 				<source src="assets/mu_pizzaboy.ogg" type="audio/ogg">
+				<p>This is the music that plays in the Void Room. It contains a speech of unknown origin (possibly the Bible? The resurrection and raining sound like the stories of Jesus and Noah's Arc). A rough transcript is provided below.</p>
+				<p>0:34 - [Unintelligible]</p>
+				<p>0:39 - Coming on down, coming on down today</p>
+				<p>0:43 - A resurrection</p>
+				<p>0:46 - I [Unintelligible] to the whole bloody world</p>
+				<p>0:50 - Raining, and raining, and raining, [flank] still raining.</p>
+				<p>0:55 - To what life [like time] of the world can be?</p>
+				<p>0:59 - [Secure] so many matters</p>
+				<p>1:01 - Ha-zi-est, to what [Unintelligible]</p>
+				<p>1:07 - [Unintelligible, perhaps another language?]</p>
 			</audio>
 			<h2>GPB Dialog</h2>
 			<ul style="font-size: 16px;">
@@ -94,6 +104,7 @@
 						<li>the others are not pleased</li>
 					</ol>
 				</li>
+				<p>There's also a 0.5% chance every time you talk for him to say "leave" repeatedly afterwards.</p>
 			</ul>
 			<h2>Crustavo</h2>
 			<p>Crustavo exists solely to say vague and ominous things to scare the player. None of his dialog is actually relevant.</p>
