--- a/keyhunt/guide-af23.html
+++ b/keyhunt/guide-af23.html
@@ -35,22 +35,21 @@
 			<p>Roll through the wall below Fun Farm.</p>
 			<iframe hidden width="560" height="315" src="https://www.youtube-nocookie.com/embed/WMeJlKWJbLQ" title="Key 3" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 			<h2>Key 4</h2>
-			<p>deep in a wall on floor 3</p>
+			<p>Go up where the Floor 3 Pizzaboy Clone used to be. Then crawl right until you can't anymore, and Ground Pound to find the 4th key.</p>
 			<iframe hidden width="560" height="315" src="https://www.youtube-nocookie.com/embed/XenVascCgds" title="Key 4" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 			<h2>Key 5</h2>
 			<p>Break into the ceiling to the left of Peppibot Factory.</p>
 			<iframe hidden width="560" height="315" src="https://www.youtube-nocookie.com/embed/aZeBpteuVBY" title="Key 5" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 			<h2>Key 6</h2>
-			<p>Break through the floor beneath You bring a light?</p>
+			<p>Ground Pound the floor beneath You bring a light?</p>
 			<iframe hidden width="560" height="315" src="https://www.youtube-nocookie.com/embed/I6rlKE50CYA" title="Key 6" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 			<h2>Key 7</h2>
-			<p>Enter and exit the Green Room. You'll collect it automatically.</p>
+			<p>Enter and exit the Green Room.</p>
 			<iframe hidden width="560" height="315" src="https://www.youtube-nocookie.com/embed/ox7522mlfsQ" title="Key 7" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 			<h2>Key 8</h2>
 			<p>Floats around randomly on the top of the tower.</p>
 			<iframe hidden width="560" height="315" src="https://www.youtube-nocookie.com/embed/UFpNLmRmoJY" title="Key 8" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h2>Silver Coneboy</h2>
-			<p>Leave the top of the tower and reenter. It will be snowy, and an entity known as Silver Coneboy will be there. Talking to him will present you with ominous dialog and will close the game, resetting your key progress. Nothing else happens from what I can tell.</p>
+			<p>Now leave the top of the tower and reenter for the finale.</p>
 		</div>
 	</body>
 </html>
