--- a/keyhunt/other-af23.html
+++ b/keyhunt/other-af23.html
@@ -23,15 +23,28 @@
 		</ul>
 		
 		<div style="padding:20px; margin-top:20px;">
-			<h1 style="text-align: center;">ARG Findings</h1>
-			<h2 style="text-align: center;">Documentation of things related to the Key Hunt</h2>
-			<h2>Mimic Toppins</h2>
-			<p>Mimics are a rare kind of Toppin that can appear at any time. Upon entering a room with a Toppin, there is a 2%* chance that the Toppin will become a mimic. Exiting and reentering the room will reset the Toppin and reroll the RNG. When a Toppin becomes a mimic, it has a 50% chance to play a distorted cry for help. Upon being collected, it will play the collect sound at 80% speed, and has a 50% chance to play a very loud sound. Mimic Toppins are entirely black, and retain the shape of whichever Toppin they replaced. Other than that, they function identically to normal Toppins and only serve to scare the player occasionally.</p>
-			<p>*When talking to GPB, he may mention the Mimics, stating that they are only there to harm you. This is misleading, as they do nothing other than jumpscare you. Reading this dialog will raise the chances of a Toppin becoming a Mimic to 50% until the next one spawns.</p>
-			<h2>GPB Dialog</h2>
-			<p>this will be a list at some point</p>
-			<h2>Crustavo</h2>
-			<p>he says words ig</p>
+			<h1 style="text-align: center;">Other Stuff</h1>
+			<h2>The Void Room</h2>
+			<audio controls><source src="assets/mu_pizzaboy-af23.ogg" type="audio/ogg"></audio>
+			<p>This is the music that plays in the Void Room, as well as several secret areas. Somehow, it is even more eerie than the previous one.
+			<br>The Void Room can be accessed in the same way as in v1.1. However, you will now be met with an infinitely looping white plane with only occasional decoration. Shadow Pizzaboy can be found by running far enough in either direction.</p>
+			<h2>Shadow Pizzaboy</h2>
+			<img src="assets/spr_heaven.png">
+			<p>Shadow Pizzaboy is a new entity that can be found in the Void Room.</p>
+			<p>Dialog:</p>
+			<ol>
+				<li>It seems as if you've broken the laws of reality, and have come to me.<br>Frail, young and lost. Just like the others...<br>Tell me... Can you see the truth too?<br>Staring down at us...<br>Judging...</li>
+				<li>Do you know where we are?<br>Lost between worlds...<br>The one below us...<br>He is coming... and sooner than you think.</li>
+				<li>Something above you...<br>Maybe up there is where the answers you're looking for are...<br>Are you sure of where you're headed?</li>
+				<li>In your search... you failed to remember...  what happened last time.</li>
+			</ol>
+			<h2>Silver Coneboy</h2>
+			<p>Silver Coneboy is a new entity that appears on top of the tower once you've collected all 8 Keys. He says a line of dialog and closes your game, resetting your keys in the process.</p>
+			<img src="assets/faviconscb.png">
+			<p>"when will you learn?"</p>
+			<h2>golden_pizazboy.png</h2>
+			<p>A room containing this image is present in the files. It can't be accessed normally. (Image brightened for clarity)</p>
+			<img src="assets/golden_pizazboy.png" width="50%">
 		</div>
     </body>
 </html>
