--- a/keyhunt/help.html
+++ b/keyhunt/help.html
@@ -13,12 +13,12 @@
 			<li><a href="guide">Keys</a></li>
 			<li><a href="help" class="current">Help</a></li>
 			<li><a href="other">Other Stuff</a></li>
-<!--		<li class="dropdown"> -->
-<!--			<a href="javascript:void(0)">Version</a> -->
-<!--			<div class="dropdown-content"> -->
-<!--				<a href="help" class="current">1.1</a> -->
-<!--				<a href="help-af23">April Fools</a> -->
-<!--			</div> -->
+			<li class="dropdown">
+				<a href="javascript:void(0)">Version</a>
+				<div class="dropdown-content">
+					<a href="help" class="current">1.1</a>
+					<a href="help-af23">April Fools</a>
+				</div>
 			</li>
 		</ul>
 		
