--- a/keyhunt/other.html
+++ b/keyhunt/other.html
@@ -13,12 +13,12 @@
 			<li><a href="guide">Keys</a></li>
 			<li><a href="help">Help</a></li>
 			<li><a href="other" class="current">Other Stuff</a></li>
-<!--		<li class="dropdown"> -->
-<!--			<a href="javascript:void(0)">Version</a> -->
-<!--			<div class="dropdown-content"> -->
-<!--				<a href="other" class="current">1.1</a> -->
-<!--				<a href="other-af23">April Fools</a> -->
-<!--			</div> -->
+			<li class="dropdown">
+				<a href="javascript:void(0)">Version</a>
+				<div class="dropdown-content">
+					<a href="other" class="current">1.1</a>
+					<a href="other-af23">April Fools</a>
+				</div>
 			</li>
 		</ul>
 		
@@ -28,19 +28,17 @@
 			<p>Mimics are a rare kind of Toppin that can appear at any time. Upon entering a room with a Toppin, there is a 2%* chance that the Toppin will become a mimic. Exiting and reentering the room will reset the Toppin and reroll the RNG. When a Toppin becomes a mimic, it has a 50% chance to play a distorted cry for help. Upon being collected, it will play the collect sound at 80% speed, and has a 50% chance to play a very loud sound. Mimic Toppins are entirely black, and retain the shape of whichever Toppin they replaced. Other than that, they function identically to normal Toppins and only serve to scare the player occasionally.</p>
 			<p>*When talking to GPB, he may mention the Mimics, stating that they are only there to harm you. This is misleading, as they do nothing other than jumpscare you. Reading this dialog will raise the chances of a Toppin becoming a Mimic to 50% until the next one spawns.</p>
 			<h2>The Void Room</h2>
-			<audio controls>
-				<source src="assets/mu_pizzaboy.ogg" type="audio/ogg">
-				<p>This is the music that plays in the Void Room. It contains a speech of unknown origin (possibly the Bible? The resurrection and raining sound like the stories of Jesus and Noah's Arc). A rough transcript is provided below.</p>
-				<p>0:34 - [Unintelligible]</p>
-				<p>0:39 - Coming on down, coming on down today</p>
-				<p>0:43 - A resurrection</p>
-				<p>0:46 - I [Unintelligible] to the whole bloody world</p>
-				<p>0:50 - Raining, and raining, and raining, [flank] still raining.</p>
-				<p>0:55 - To what life [like time] of the world can be?</p>
-				<p>0:59 - [Secure] so many matters</p>
-				<p>1:01 - Ha-zi-est, to what [Unintelligible]</p>
-				<p>1:07 - [Unintelligible, perhaps another language?]</p>
-			</audio>
+			<audio controls><source src="assets/mu_pizzaboy.ogg" type="audio/ogg"></audio>
+			<p>This is the music that plays in the Void Room, as well as the Pizzaboy Clone rooms. It contains a speech of unknown origin (possibly the Bible? The resurrection and raining sound like the stories of Jesus and Noah's Arc). A rough transcript is provided below.</p>
+			<p>0:34 - [Unintelligible]</p>
+			<p>0:39 - Coming on down, coming on down today</p>
+			<p>0:43 - A resurrection</p>
+			<p>0:46 - I [Unintelligible] to the whole bloody world</p>
+			<p>0:50 - Raining, and raining, and raining, [flank] still raining.</p>
+			<p>0:55 - To what life [like time] of the world can be?</p>
+			<p>0:59 - [Secure] so many matters</p>
+			<p>1:01 - Ha-zi-est, to what [Unintelligible]</p>
+			<p>1:07 - [Unintelligible, perhaps another language?]</p>
 			<h2>GPB Dialog</h2>
 			<ul style="font-size: 16px;">
 				<li>Standard Dialog:
