--- a/keyhunt/guide.html
+++ b/keyhunt/guide.html
@@ -177,6 +177,9 @@
 				<li>A new hint now appears in the credits. Run into the underside of the small overhang next to GPB. Afterwards, the last Key will spawn on top of the tower. Collect it and return to the Void Room for the finale.<br>
 				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/izvLgxItydA" title="Key 36g" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe></li>
 			</ol>
+			<h2 id="37">Key 37</h2>
+			<p>The Key in the ceiling above John Gutter has made many upset. It looks obtainable, like its taunting you. Fortunately, it is possible, see the video below for help.</p>
+			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/FAbxIdeF6CA" title="Key 35" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 		</div>
 	</body>
 </html>
