v2 guide exists now no need for (Coming Soon!)

--- a/keyhunt/guide-af23.html
+++ b/keyhunt/guide-af23.html
@@ -23,7 +23,7 @@
 		</ul>
 
 		<div style="padding:20px; margin-top:20px;">
-			<h1>V2 All Keys Video Guide (Coming Soon!)</h1>
+			<h1>V2 All Keys Video Guide</h1>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/niyZ3ia7-q0" title="Key 1" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 			<p>This video shows the location of all 8 Keys in the April Fools 2023 build. If you need help on a specific Key, it can be found below.</p>
 			<h2>Key 1</h2>
