--- a/keyhunt/guide-af23.html
+++ b/keyhunt/guide-af23.html
@@ -22,6 +22,8 @@
 			</li>
 		</ul>
 
+		<div class="scrolling_bg"></div>
+
 		<div style="padding:20px; margin-top:20px;">
 			<h1>V2 All Keys Video Guide</h1>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/niyZ3ia7-q0" title="Key 1" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
