--- a/keyhunt/keyhunt-af23.html
+++ b/keyhunt/keyhunt-af23.html
@@ -21,6 +21,8 @@
 				</div>
 			</li>
 		</ul>
+
+		<div class="scrolling_bg"></div>
 		
 		<div style="padding:20px; margin-top:20px;">
 			<h1>Scoutdigo Key Hunt Guide</h1>
