--- a/keyhunt/keyhunt-redux.html
+++ b/keyhunt/keyhunt-redux.html
@@ -3,35 +3,30 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="keyhunt.css">
-		<title>what are you running from?</title>
-  		<link rel="icon" type="image/x-icon" href="assets/favicon.png">
+		<title>why are you here?</title>
+  		<link rel="icon" type="image/x-icon" href="assets/faviconredux.png">
 	</head>
 
 	<body style="text-align: center;">
 		<ul class="navBar">
 			<li><a href="keyhunt" class="current">Landing page</a></li>
-			<li><a href="guide">Keys</a></li>
-			<li><a href="help">Help</a></li>
-			<li><a href="other">Other Stuff</a></li>
 			<li class="dropdown">
 				<a href="javascript:void(0)">Version</a>
 				<div class="dropdown-content">
-					<a href="keyhunt" class="current">1.1</a>
+					<a href="keyhunt">1.1</a>
 					<a href="keyhunt-af23">April Fools</a>
-					<a href="keyhunt-redux">ReDuX</a>
+					<a href="keyhunt-redux" class="current">ReDuX</a>
 				</div>
 			</li>
 		</ul>
 		
 		<div style="padding:20px; margin-top:20px;">
-			<h1>Scoutdigo Key Hunt Guide</h1>
+			<h1>ScoutDigo DX: ReDuX Key Hunt Guide</h1>
 			<h2>Why?</h2>
-			<p>To put it simply: I got tired of repeating myself.</p>
+			<p>To put it simply: I didn't think this joke would get this far lmao.</p>
 			<h1 style="margin-top: 128px; color: red">Read this. Seriously.</h1>
-			<p>You will probably have issues, and that's okay!</p>
-			<p>Struggling is part of the learning process.</p>
-			<p>However, to expedite that process I have included a help section, found <a href="help">here</a>.</p>
-			<p>Please, <span class="important">please</span> read it before asking questions. The answer is probably there.</p>
+			<p>The mod isn't out yet.</p>
+			<p class="important">Leave.</p>
 			<p style="margin-top: 64px; font-size: 12px;">Notice: WestCraft15 reserves the right to yell at you if you ask a dumb question.<br>A dumb question is defined as "anything which has already been answered in the help section."</p>
 		</div>
     </body>
