--- a/keyhunt/guide.html
+++ b/keyhunt/guide.html
@@ -18,6 +18,7 @@
 				<div class="dropdown-content">
 					<a href="guide" class="current">1.1</a>
 					<a href="guide-af23">April Fools</a>
+					<a href="keyhunt-redux">ReDuX</a>
 				</div>
 			</li>
 		</ul>
