--- a/keyhunt/other.html
+++ b/keyhunt/other.html
@@ -18,6 +18,7 @@
 				<div class="dropdown-content">
 					<a href="other" class="current">1.1</a>
 					<a href="other-af23">April Fools</a>
+					<a href="keyhunt-redux">ReDuX</a>
 				</div>
 			</li>
 		</ul>
