--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 	</head>
 
-	<body style="background-image: url(assets/404.png); text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 125%;">
+	<body style="background-image: url(/assets/404.png); text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 125%;">
 		<p style="font-size: 72px;">Error 404</p>
 	</body>
 
